# Woclaw

./: .ci-trigger  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOGO.md  README.md  REDESIGN.md  config.example.py  pyproject.toml  test_evolution.py  test_full.py  test_gui.py  test_gui_backend.py  test_gui_final.py  test_gui_full.py  test_import.py  test_workers.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: en.md  index.md  install.html  ja.md
scripts/: install.ps1
src/: __init__.py
src/woclaw/: __init__.py  cli.py
src/woclaw/gateway/: __init__.py  hub.py
src/woclaw/learning/: __init__.py  memory.py
src/woclaw/llm/: __init__.py  base.py  openai_llm.py  registry.py
src/woclaw/skills/: __init__.py  manager.py
src/woclaw/skills/evolution/: config.json
src/woclaw/skills/evolution/modules/: __init__.py
src/woclaw/skills/evolution/scripts/: run.py
src/woclaw/supervisor/: __init__.py  agent.py  executor.py  planner.py
src/woclaw/workers/: __init__.py  base.py  browser_worker.py  code_worker.py  file_worker.py  gui_worker.py  shell_worker.py  sys_worker.py  web_worker.py
tests/: __init__.py  test_agent.py  test_config.py  test_tools.py
woclaw/: __init__.py  cli.py  config.py
woclaw/agent/: __init__.py  core.py  executor.py  memory.py  planner.py
woclaw/llm/: __init__.py  base.py  claude.py  ollama.py  openai.py  registry.py
woclaw/storage/: __init__.py  cache.py  database.py
woclaw/tools/: __init__.py  archive.py  automation.py  base.py  browser.py  clipboard.py  data.py  filesystem.py  image.py  network.py  process.py  screenshot.py  shell.py  system.py  web.py
