[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woclaw"
version = "0.1.0"
description = "轻量级自主电脑控制智能体 - Lightweight Autonomous Computer Control Agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Woclaw Team", email = "team@woclaw.dev"}
]
maintainers = [
    {name = "Woclaw Team", email = "team@woclaw.dev"}
]
keywords = [
    "ai",
    "agent",
    "automation",
    "llm",
    "autonomous",
    "computer-control",
    "desktop-automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "asyncpg>=0.28.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pyperclip>=1.8.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.18.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
woclaw = "woclaw.cli:cli"

[project.urls]
Homepage = "https://github.com/badhope/Xiaobai"
Documentation = "https://github.com/badhope/Xiaobai#readme"
Repository = "https://github.com/badhope/Xiaobai.git"
Issues = "https://github.com/badhope/Xiaobai/issues"
Changelog = "https://github.com/badhope/Xiaobai/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["woclaw*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
